--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "startdev": "node app.js"
+    "starttest": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
